--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>ENSO Explorer</title>
         <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    </head>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
         <svg id="graph"></svg>
         <script src="lib/jquery.min.js"></script>
