--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>ENSO Explorer</title>
-        <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
+<head>
+    <meta charset="utf-8">
+    <title>ENSO Explorer</title>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
-        <svg id="graph"></svg>
+        <div id="container">
+            <svg id="graph"></svg>
+        </div>
         <script src="lib/jquery.min.js"></script>
         <script src="lib/d3.min.js" charset="utf-8"></script>
-        <script src="script.js"></script>
+        <script src="js/constants.js"> </script>
+        <script src="js/script.js"></script>
     </body>
-</html>
+    </html>
