--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
-        <div id="container">
-            <svg id="graph"></svg>
-        </div>
+        <main>
+            <div class="container left">
+                <svg id="y-axis" class="axis"></svg>
+            </div>
+            <div class="container right">
+                <svg id="graph"></svg>
+            </div>
+        </main>        
         <script src="lib/jquery.min.js"></script>
-        <script src="lib/d3.min.js" charset="utf-8"></script>
+        <script src="lib/d3.v4.min.js" charset="utf-8"></script>
         <script src="js/constants.js"> </script>
         <script src="js/script.js"></script>
     </body>
