--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>ENSO Explorer</title>
-    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/color.css" media="screen" title="no title" charset="utf-8">
+
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
         <main>
@@ -13,7 +15,7 @@
             <div class="container right">
                 <svg id="graph"></svg>
             </div>
-        </main>        
+        </main>
         <script src="lib/jquery.min.js"></script>
         <script src="lib/d3.v4.min.js" charset="utf-8"></script>
         <script src="js/constants.js"> </script>
