Added button to filter by even years as a POC

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
+        <button>1950</button>
         <main>
             <div class="container left">
                 <svg id="y-axis" class="axis"></svg>
