--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
-        <button>Even</button>
+        <button>Random</button>
         <main>
             <div class="container left">
                 <svg id="y-axis" class="axis"></svg>
@@ -17,8 +17,12 @@
                 <svg id="graph"></svg>
             </div>
         </main>
+
+        <!-- Libraries -->
         <script src="lib/jquery.min.js"></script>
         <script src="lib/d3.v4.min.js" charset="utf-8"></script>
+
+        <!-- Visualization -->
         <script src="js/constants.js"> </script>
         <script src="js/script.js"></script>
     </body>
