Added filtering by year using search input

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>    </head>
     <body>
-        <button>Random</button>
+        <div class="filter">
+            <div class="search-filter">
+                <input type="search" placeholder="Search..." />
+                <div class="search-line"></div>
+            </div>
+        </div>
         <main>
             <div class="container left">
                 <svg id="y-axis" class="axis"></svg>
